--- a/views/index.pug
+++ b/views/index.pug
@@ -1,1 +1,20 @@
-h2 port 8000
+html
+	head
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+		link(rel="stylesheet", type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.3.0/css/flat-ui.min.css")
+
+	body
+		.container
+			nav.navbar.navbar-inverse.navbar-embossed
+				.container-fluid
+					.navbar-header
+						a.navbar-brand(href="#") logo
+					.collapse.navbar-collapse
+						ul.nav.navbar-nav.navbar-right
+							li
+								a(href="auth/facebook") Iniciar sesión con facebook
+			section
+				h1 Perfil
+				p Cuéntanos acerca de tus logros
+
